# insuranceops-ai

./: .env.example  .gitignore  DEPLOYMENT_STRATEGY.md  OBSERVABILITY_STRATEGY.md  PHASED_ROADMAP.md  PRODUCT_REQUIREMENTS.md  README.md  RISK_ANALYSIS.md  SECURITY_REVIEW.md  SPEC.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_DEBT_PREVENTION.md  TERMINOLOGY.md  TESTING_STRATEGY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
compose/: compose.test.yml  compose.yml
docker/: Dockerfile
docs/: demo-scenarios.md  demo-video-guide.md  demo-walkthrough.md  deployment-validation.md  deployment.md  getting-started.md  operations.md
docs/architecture/: README.md  ai-integration.md  audit-chain.md  queue-topology.md  worker-architecture.md  workflow-lifecycle.md
docs/demo-assets/: sample_auto_claim.txt  sample_invalid_policy.txt  sample_minimal.txt  sample_property_claim.txt
docs/screenshots/: README.md
migrations/: alembic.ini  env.py
migrations/versions/: 0001_initial.py
ops/runbooks/: README.md  backup_restore.md
scripts/: backup_postgres.sh  check_migrations.py  dev_down.sh  dev_up.sh  opsctl  restore_postgres.sh  seed_dev_data.py  verify_phase1.sh
src/insuranceops/: __init__.py  config.py
src/insuranceops/ai/: __init__.py  execution_metadata.py  ingestion.py  mock_provider.py  providers.py  review.py  summarization.py
src/insuranceops/api/: __init__.py  app.py  deps.py
src/insuranceops/api/routes/: documents.py  escalations.py  health.py  metrics.py  workflow_runs.py
src/insuranceops/api/schemas/: documents.py  errors.py  escalations.py  workflow_runs.py
src/insuranceops/audit/: __init__.py  chain.py  verifier.py
src/insuranceops/domain/: __init__.py  actors.py  audit.py  documents.py  escalations.py  step_attempts.py  steps.py  workflow_runs.py
src/insuranceops/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/insuranceops/queue/: __init__.py  delayed_queue.py  dlq.py  redis_client.py  reliable_queue.py
src/insuranceops/security/: __init__.py  auth.py  rate_limit.py  rbac.py  redaction.py
src/insuranceops/storage/: __init__.py  db.py  models.py
src/insuranceops/storage/payloads/: __init__.py  local.py
src/insuranceops/storage/repositories/: __init__.py  audit.py  documents.py  escalations.py  outbox.py  step_attempts.py  steps.py  (+1 more)
src/insuranceops/workers/: __init__.py  audit_verifier.py  loop.py  main.py  outbox_relay.py  reaper.py  scheduler.py
src/insuranceops/workflows/: __init__.py  orchestrator.py  registry.py  retry.py
tests/: conftest.py
tests/audit/: test_audit_chain_integrity.py
tests/integration/: test_api_documents.py  test_api_escalations.py  test_api_workflow_runs.py  test_queue_reliability.py
tests/unit/: test_ai_integration.py  test_audit_chain.py  test_audit_verifier_loop.py  test_check_migrations.py  test_dlq_helpers.py  test_domain_invariants.py  test_rate_limit.py  test_retry_policy.py  test_rule_based_validator.py  test_stub_extractor.py
tests/workflow/: test_claim_intake_v1_escalation.py  test_claim_intake_v1_happy_path.py  test_claim_intake_v1_retries.py  test_replay_determinism.py
(+16 files in other folders)
